--- a/index4.html
+++ b/index4.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
   
-  <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-8 w-full max-w-4xl">
+  <div class="flex bg-white p-5 rounded-lg flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-8 w-full max-w-4xl">
     <!-- Columna Izquierda: Visor 360° y Selectores de Color -->
     <div class="flex flex-col items-center space-y-4 w-full md:w-2/3">
       
