--- a/index4.html
+++ b/index4.html
@@ -55,7 +55,7 @@
         mt: ["Transmisión manual", "5 velocidades", "Tracción delantera"],
         cvt: ["Transmisión CVT", "7 velocidades", "Tracción delantera"]
       },
-      hilux: {
+      hilux_cabina_doble: {
         mt: ["Transmisión manual", "6 velocidades", "Tracción 4x4"],
         at: ["Transmisión automática", "6 velocidades", "Tracción 4x4"]
       }
@@ -132,7 +132,7 @@
         { name: "XLS", slug: "xls", subversions: ["XLS 1.5 6M/T 4P", "XLS 1.5 CVT 4P", "XLS PACK 1.5 CVT 4P"] }
       ],
       hilux_cabina_doble: [
-        { name: "DX", slug: "dx", subversions: ["mt"] },
+        { name: "DX", slug: "dx", subversions: ["DX 4X2 6MT", "SR 4X2 6MT", "hola"] },
         { name: "SR", slug: "sr", subversions: ["mt", "at"] },
         { name: "SRV", slug: "srv", subversions:["mt", "at"] },
         { name: "SRX", slug: "srx", subversions:["mt", "at"] }
