--- a/index4.html
+++ b/index4.html
@@ -403,52 +403,55 @@
       sw4: {
         srx: {
           "SRX 4X4 6AT 7A": [
-            { name: "Negro Mica", code: "black", hex: "#292826" },
-            { name: "Super Blanco", code: "white", hex: "#F8F8F8" },
-            { name: "Azul Oscuro Metalizado", code: "blue", hex: "#00022E" },
-            { name: "Blanco Perlado", code: "white-perl", hex: "#DBDAD6" },
-            { name: "Gris Oscuro", code: "gray", hex: "#746D67" },
-            { name: "Gris Plata", code: "silver", hex: "#DCDCDE" }
+            { name: "Plata Metalizado", code: "silver", hex: "#D3D3D3" },
+            { name: "Negro Mica", code: "black", hex: "#191919" },
+            { name: "Gris Oscuro Metalizado", code: "gray", hex: "#A6A6A6" },
+            { name: "Blanco Perlado", code: "white-perl", hex: "#E9E8E3" }
           ]
         },
         diamond: {
           "DIAMOND 4X4 6AT 7A": [
-            { name: "Blanco Perlado", code: "white-perl", hex: "#DBDAD6" },
-            { name: "Negro Mica", code: "black", hex: "#292826" }
+            { name: "Plata Metalizado", code: "silver", hex: "#D3D3D3" },
+            { name: "Negro Mica", code: "black", hex: "#191919" },
+            { name: "Gris Oscuro Metalizado", code: "gray", hex: "#A6A6A6" },
+            { name: "Blanco Perlado", code: "white-perl", hex: "#E9E8E3" }
           ]
         }
       },
       sw4_gr_sport: {
         "gr-sport": {
           "4X4 6AT 7A": [
-            { name: "Blanco Perlado", code: "white-perl", hex: "#DBDAD6" },
-            { name: "Negro Mica", code: "black", hex: "#292826" }
+            { name: "Blanco Perlado Bitono", code: "white-perl", hex: "#D1D0CE" },
+            { name: "Negro Mica", code: "black", hex: "#191919" }
           ]
         }
       },
       hiace_furgon: {
         l1h1: {
           "2.8 TDI 6AT 3A": [
-            { name: "Blanco", code: "white", hex: "#FFFFFF" }
+            { name: "Blanco", code: "white", hex: "#F9F9F8" }
           ]
         },
         l2h2: {
           "2.8 TDI 6AT 3A": [
-            { name: "Blanco", code: "white", hex: "#FFFFFF" }
+            { name: "Blanco", code: "white", hex: "#F9F9F8" }
           ]
         }
       },
       hiace_commuter: {
         commuter: {
           "2.8 TDI 6AT 14A": [
-            { name: "Blanco", code: "white", hex: "#FFFFFF" }
+            { name: "Blanco", code: "white", hex: "#F9F9F8" }
           ]
         }
       },
       hiace_wagon: {
         wagon: {
           "2.8 TDI 6AT 10A": [
-            { name: "Blanco", code: "white", hex: "#FFFFFF" }
+            { name: "Negro", code: "black", hex: "#292826" },
+            { name: "Gris Oscuro", code: "gray", hex: "#746D67" },
+            { name: "Blanco Perlado", code: "white-perl", hex: "#DBDAD6" },
+            { name: "Gris Plata", code: "silver", hex: "#DCDCDE" }
           ]
         }
       }
